<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BAMF Settings</string>
    <string name="performance_tab_label">Performance</string>
    <string name="system_tab_label">System</string>
    <string name="visual_tab_label">Visual</string>
    <string name="kernel_settings">Kernel Settings</string>
    <string name="voltage_settings">Voltage Settings</string>
    <string name="maintenance_settings">Maintenance Options</string>
    <string name="system_settings">System Settings</string>
    <string name="system_app_settings">Application Settings</string>
    <string name="visual_settings">Visual Settings</string>
    <string name="lockscreen_settings">Lockscreen Settings</string>
    <string name="quicklaunch_settings">QuickLaunch Settings</string>
    <string name="icon_settings">Status Bar Icon Settings</string>
    <string name="navbar_settings">Navbar Settings</string>
    <string name="permlab_restartsysui">Restart SystemUI</string>
    <string name="permdesc_restartsysui">Required to be able to broadcast an action to reboot SystemUI</string>
    <string name="root_service_warning">There was a problem obtaining the root service.</string>
    <string name="reboot_warning_title">Requires Reboot</string>
    <string name="reboot_warning_desc">This function requires a reboot of the phone, do you wish to continue?</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="help">Help</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="ok">@android:string/ok</string>
    <string name="set">Set</string>
    <string name="hex">HEX</string>
    <string name="color_hex_invalid">Invalid code</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="configure_behavior">Configure Behavior</string>
    <string name="lockscreen_add_shortcut">Add Shortcut</string>
    <string name="lockscreen_clear_shortcut">Clear All</string>
    <string name="lockscreen_clear_description">Are you sure you want to clear all shortcuts?</string>
    <string name="allow_all_widget_title">Allow all widgets</string>
    <string name="allow_all_widget_summary">This is done at your own risk</string>
    <string name="enable_quicklaunch_title">QuickLaunch</string>
    <string name="enable_quicklaunch_summary">Enables the lockscreen QuickLaunch shortcut ribbon.</string>
    <string name="always_quicklaunch_title">Always show QuickLaunch</string>
    <string name="always_quicklaunch_summary_on">QuickLaunch is always shown.</string>
    <string name="always_quicklaunch_summary_off">QuickLaunch is toggled with the home button.</string>
    <string name="long_quicklaunch_title">Launch on Longpress</string>
    <string name="long_quicklaunch_summary_on">Shortcut launched on longpress.</string>
    <string name="long_quicklaunch_summary_off">Shortcut launched on touch.</string>
    <string name="manage_quicklaunch_title">Manage QuickLaunch</string>
    <string name="manage_quicklaunch_summary">Change the availability and order of QuickLaunch shortcuts.</string>
    <string name="warning_none_set">Problem loading shortcut or no shortcuts set</string>
    <string name="warning_problem_shortcut">Problem loading shortcut</string>
    <string name="show_unlock_title">Always show unlock</string>
    <string name="show_unlock_summary">Shows the unlock ring before any other security features.</string>
    <string name="disable">Disable</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="manage_applications">Manage Applications</string>
    <string name="enable">Enable</string>
    <string name="clear_shortcut">Clear Shortcut</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="launcher_screen_summary">Currently there are %1$d</string>
    <string name="default_cpu">1350 MHz</string>
    <string name="currently">Current:</string>
    <string name="def_volt">Default: 900 mV</string>
    <string name="configure_navigation_keys">Configure Navigation Keys</string>
    <string name="force_navigation_keys">Force Navigation Keys</string>
    <string name="navbar_cursor">Keyboard Arrows</string>
    <string name="navbar_menu_behavior">Legacy menu button behavior</string>
    <string name="search_key_title">Search Key</string>
    <string name="search_key_summary_on">Search key shown</string>
    <string name="search_key_summary_off">Search key hidden</string>
    <string name="reflect_key_title">Key Reflections</string>
    <string name="reflect_key_summary_on">Reflections are shown</string>
    <string name="reflect_key_summary_off">No Reflections are shown</string>
    <string name="pref_lng_press_default_title">Search Key Long Press</string>
    <string name="pref_lng_press_default_summary">Use the default action for the search key long press event</string>
    <string name="pref_lng_press_default_summary_on">Use a custom activity for the search key long press event</string>
    <string name="pref_custom_search_title">Tap to customize</string>
    <string name="color_picker_arrow">→</string>
    <string name="category_navbar_buttons">Color</string>
    <string name="title_navbar_color_picker">Navbar Button Color</string>
    <string name="title_navbar_glow_picker">Navbar Glow Color</string>
    <string name="summary_navbar_color_picker">Choose the color overlay for the navigation buttons</string>
    <string name="summary_navbar_glow_picker">Choose the color for the button glow</string>
    <string name="title_color_picker_dialog">Choose button color</string>
    <string name="title_clock_picker_dialog">Choose clock color</string>
    <string name="title_glow_picker_dialog">Choose glow color</string>
    <string name="navbar_save">Save Layout Changes</string>
    <string name="navbar_available">Available Keys</string>
    <string name="navbar_instruct">Long press and drag to arrange the navbar keys to your liking. Click a key to set the long press behavior.</string>
    <string name="lockscreen_pref_title">Configure Lockscreen</string>
    <string name="launcher_category_title">Launcher Tweaks</string>
    <string name="dock_divider_title">Dock Divider</string>
    <string name="search_bar_title">Search Bar</string>
    <string name="dock_divider_summary_on">Dock Divider is shown</string>
    <string name="dock_divider_summary_off">Dock Divider is hidden</string>
    <string name="skin_test">Test Skin</string>
    <string name="apply">Apply</string>
    <string name="uninstall">Uninstall</string>
    <string name="skin_settings">Choose Skin</string>
    <string name="theme_settings">Theme Options</string>
    <string name="sb_category_title">Status Bar Settings</string>
    <string name="clock_title">Status Bar Clock</string>
    <string name="clock_dialog_title">Choose Clock Style</string>
    <string name="show_debug_title">Debugging Indicator</string>
    <string name="show_debug_summary_on">Icon is shown</string>
    <string name="show_debug_summary_off">Icon is hidden</string>
    <string name="show_alarm_title">Alarm Indicator</string>
    <string name="show_alarm_summary_on">Alarm is shown</string>
    <string name="show_alarm_summary_off">Alarm is hidden</string>
    <string name="title_always_hide_clock">Always Hide Clock</string>
    <string name="summary_always_hide_clock">Hides the statusbar clock on the lockscreen regardless of active widget.</string>
    <string name="title_clock_text">Status Bar Clock Color</string>
    <string name="summary_clock_text">Set the color for the Status Bar Clock</string>
    <string name="use_custom_carrier_label_title">Use custom carrier label</string>
    <string name="use_custom_carrier_label_summary">Display a custom label in the expanded status bar where the carrier text shows</string>
    <string name="custom_carrier_label_title">Tap to customize label string</string>
    <string name="custom_carrier_label_dialog_title">Custom Carrier Label</string>
    <string name="custom_carrier_default">BAMF Paradigm</string>
    <string name="ip_category_title">Icon Preferences</string>
    <string name="ip_summary">Change which Icons are shown and customize their appearance</string>
    <string name="battery_style_title">Battery Style</string>
    <string name="battery_style_dialog_title">Choose Battery Style</string>
    <string name="battery_style_loading">Loading available Battery Styles</string>
    <string name="signal_style_title">Signal Style</string>
    <string name="signal_style_dialog_title">Choose Signal Style</string>
    <string name="signal_style_loading">Loading available Signal Styles</string>
    <string name="navbar_style_title">Navbar Style</string>
    <string name="navbar_style_dialog_title">Choose Navbar Style</string>
    <string name="navbar_style_loading">Loading available Navbar Styles</string>
    <string name="category_battery_tweaks">Battery Tweaks</string>
    <string name="battery_text_title">Battery Text</string>
    <string name="battery_text_summary">Change the visibility, size, and color</string>
    <string name="acc_battery_text">Battery Text</string>
    <string name="acc_battery_text_color">Color</string>
    <string name="acc_battery_text_size">Size</string>
    <string name="acc_battery_text_charging">Show when charging</string>
    <string name="cpu_min_title">Minimum CPU Speed</string>
    <string name="cpu_max_title">Maximum CPU Speed</string>
    <string name="cpu_governor_title">Kernel Governor</string>
    <string name="cpu_scheduler_title">I/O Scheduler Options</string>
    <string name="cpu_aob_title">Apply On Boot</string>
    <string name="cpu_aob_on">Settings will applied on each startup</string>
    <string name="cpu_aob_off">Settings are lost on reboot</string>
    <string name="system_basic_block_title">Block Ads</string>
    <string name="system_basic_block_off">All ads are allowed</string>
    <string name="system_basic_block_on">Most ads are blocked</string>
    <string name="system_basic_mount_title">Remount System</string>
    <string name="system_basic_end_call_title">Notification End Call</string>
    <string name="system_basic_bright_title">AutoBrightness Settings</string>
    <string name="system_basic_bright_summary">Manage the autobrightness levels</string>
    <string name="system_basic_apps_title">Manage System Apps</string>
    <string name="system_basic_apps_summary">Enable, Disable, or completely remove system applications</string>
    <string name="quick_settings_title">Quick Tile Settings</string>
    <string name="quick_settings_summary">Choose which quick tiles to display</string>
    <string name="done">Done</string>
    <string name="summary_quicksettings_picker">Choose which Quick Settings to display</string>
    <string name="title_qs_modes">Options</string>
    <string name="pref_custom_toggle_title">Action</string>
    <string name="pref_notification_mode_title">Visibility</string>
    <string name="pref_animations">Animations</string>
    <string name="pref_behavior">Behavior</string>
    <string name="rows">Rows</string>
    <string name="columns">Columns</string>
    <string name="by">X</string>
    <string name="system_basic_boot_title">Boot Animation Options</string>
    <string name="system_basic_boot_summary">Configure the boot animation and sound</string>
    <string name="notifications_title">Manage Notifications</string>
    <string name="vibrate_length_title">Length</string>
    <string name="vibrate_pause_title">Pause</string>
    <string name="vibrate_repeat_title">Repeat</string>
    <string name="led_preset_title">Presets</string>
    <string name="led_special_title">Special</string>
    <string name="led_blink_rate_title">Flash rate</string>
    <string name="edit_button_text">...</string>
    <string name="pref_screenshot">Screenshot action</string>
</resources>