<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="horizontal">
    <LinearLayout android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/rows"/>
	    <NumberPicker android:id="@+id/rows"
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"/>
    </LinearLayout>
    <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="45dp"
            android:text="@string/by"/>
    <LinearLayout android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
	    <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/columns"/>
	    <NumberPicker android:id="@+id/columns"
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"/>
	</LinearLayout>
</LinearLayout>