<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skin_settings"
        android:textAppearance="?android:attr/listSeparatorTextViewStyle" android:layout_margin="5dip"/>
        
    <ImageView
    	android:layout_width="match_parent"
    	android:layout_height="2dip"
    	android:src="@drawable/list_divider_holo_dark" android:scaleType="fitXY"/>

    <com.bamf.settings.widgets.CoverFlow
        android:id="@+id/skins_content"
        android:layout_width="match_parent"
        android:layout_height="0dp" android:layout_weight="1"/>
    
    <TextView
        android:id="@+id/skin_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skin_test"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical|center_horizontal"/>
    
    <LinearLayout android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="beginning">
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:measureWithLargestChild="true">
            <LinearLayout android:id="@+id/leftSpacer"
                android:layout_weight="0.25"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" />
            <Button android:id="@+id/uninstall_button"
                android:layout_width="0dip"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:maxLines="2"
                android:text="@string/uninstall"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content" />
            <Button android:id="@+id/apply_button"
                android:layout_width="0dip"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:maxLines="2"
                android:text="@string/apply"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content" />
            <LinearLayout android:id="@+id/rightSpacer"
                android:layout_width="0dip"
                android:layout_weight="0.25"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" />
        </LinearLayout>
     </LinearLayout>

</LinearLayout>
