<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        
    <TextView android:id="@*android:id/message"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textColor="?android:attr/textColorSecondary"
	    android:maxLines="4"
	    android:padding="10dip" />
    
    <LinearLayout android:layout_width="match_parent"
    	android:layout_height="60dip"
    	android:orientation="horizontal"
    	android:gravity="left"
    	android:paddingTop="10dip"
    	android:paddingLeft="30dip"
    	android:paddingRight="30dip">
    	  
	    <TextView android:layout_width="60dip"
		    android:layout_height="wrap_content"
		    android:gravity="left"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:text="@string/vibrate_length_title" />
            
	    <Spinner android:id="@+id/vibrate_length"
	        android:layout_width="0dip"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dip" />
	        
	</LinearLayout>
	
	<LinearLayout android:layout_width="match_parent"
    	android:layout_height="60dip"
    	android:orientation="horizontal"
    	android:gravity="left"
    	android:paddingTop="10dip"
    	android:paddingLeft="30dip"
    	android:paddingRight="30dip">
    	  
	    <TextView android:layout_width="60dip"
		    android:layout_height="wrap_content"
		    android:gravity="left"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:text="@string/vibrate_pause_title" />
            
	    <Spinner android:id="@+id/vibrate_pause"
	        android:layout_width="0dip"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dip" />
	        
	</LinearLayout>
	
	<LinearLayout android:layout_width="match_parent"
    	android:layout_height="60dip"
    	android:orientation="horizontal"
    	android:gravity="left"
    	android:paddingTop="10dip"
    	android:paddingBottom="5dip"
    	android:paddingLeft="30dip"
    	android:paddingRight="30dip">
    	  
	    <TextView android:layout_width="60dip"
		    android:layout_height="wrap_content"
		    android:gravity="left"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:text="@string/vibrate_repeat_title" />
            
	    <Spinner android:id="@+id/vibrate_repeat"
	        android:layout_width="0dip"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dip" />
	        
	</LinearLayout>
        
</LinearLayout>